# desmos_midi

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.bat  build.rs  build.sh  clean.bat  clean.sh  config.toml  export.bat  export.sh  export_midi.py  play.bat  play.sh  play_song.py  requirements.txt  run.bat  run.sh  run_web.bat  run_web.sh  webui.bat  webui.sh
scripts/: README.md  package_unix.sh  package_windows.ps1
soundfonts/: default.txt  saw.txt  square.txt  triangle.txt
src/: cli.rs  config.rs  lib.rs  main.rs  midi.rs  player.rs
src/audio/: analysis.rs  mod.rs  types.rs  wav.rs
src/keyboard/: input.rs  mod.rs  player.rs  types.rs
src/midi/: export.rs  mod.rs  parser.rs  soundfonts.rs  timing.rs  types.rs
src/web/: server.rs
src/web/static/: index.html  soundfont_studio.html  wav_to_soundfont.html
src/web/static/css/: styles.css
src/web/static/js/: index.js  soundfont_studio.js  wav_to_soundfont.js
src/web/static/js/modules/: fileManager.js
tests/: audio_tests.rs  format_tests.rs  integration_tests.rs  midi_tests.rs  test_utils.rs
tests/samples/: c4_chromatic_60bpm.mid  c4_chromatic_dynamicbpm.mid  c4c5_chromatic_piano_sax_dynamicbpm.mid
