[package]
name = "desmos_midi"
authors = ["Ruel Nathaniel Alarcon"]
description = "A Rust-based CLI tool and Web UI for converting MIDI files into formulas for Desmos."
version = "2.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/ruelalarcon/desmos_midi"
readme = "README.md"
keywords = ["midi", "desmos", "music", "converter", "cli", "web"]
categories = ["command-line-utilities", "multimedia"]
build = "build.rs"

[features]
default = ["cli"]
cli = [
    "clipboard"
]
webui = [
    "axum",
    "tokio",
    "tower-http",
    "serde_json",
    "tracing",
    "tracing-subscriber",
    "tower",
]

[dependencies]
# Core dependencies
thiserror = "2.0.11"
clap = { version = "4.5", features = ["derive"] }
midly = "0.5"
rustfft = "6.1"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI dependencies
clipboard = { version = "0.5", optional = true }

# Web server dependencies
axum = { version = "0.8.1", features = ["multipart"], optional = true }
tokio = { version = "1.36", features = ["full"], optional = true }
tower-http = { version = "0.6.2", features = ["fs", "trace"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tower = { version = "0.5.2", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "desmos_midi"
path = "src/cli.rs"
required-features = ["cli"]

[[bin]]
name = "desmos_midi_web"
path = "src/web/server.rs"
required-features = ["webui"]